java-gradle-template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-gradle
  namespace: default
  annotations:
    app: 'java-gradle'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-gradle
  template:
    metadata:
      labels:
        app: java-gradle
    spec:
      containers:
        - name: java-gradle
          image: <account-id>.dkr.ecr.<region>.amazonaws.com/java-gradle:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: java-gradle
  annotations:
    app: 'java-gradle'
    alb.ingress.kubernetes.io/healthcheck-path: "/ping"
spec:
  selector:
    app: java-gradle
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "java-gradle-ingress"
  namespace: default
  annotations:
    app: 'java-gradle'
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: java-gradle
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=30
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=10
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account-id>:certificate/<id>
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/tags: env=dev
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '29'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
spec:
  rules:
  - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "java-gradle"
                port:
                  number: 8080
